studlan/themes/bootstrap202/static/css/custom.css
html, body {
    height: 100%;
}

body {
    padding-top: 60px;
    background: url("../img/bg.png") repeat-x scroll 0 -160px transparent;
}

h1 {
    margin-bottom: 0.5em;
}

.white-text {
    color: #ccc;
}

.topbar-inner {
    /* From #333333 to #222222*/
    background-image: -khtml-gradient(linear, left top, left bottom, from(#333333), to(#222222));
    background-image: -moz-linear-gradient(top, #333333, #222222);
    background-image: -ms-linear-gradient(top, #333333, #222222);
    background-image: -webkit-gradient(linear, left top, left bottom, color-stop(0%, #333333), color-stop(100%, #222222));
    background-image: -webkit-linear-gradient(top, #333333, #222222);
    background-image: -o-linear-gradient(top, #333333, #222222);
    background-image: linear-gradient(top, #333333, #222222);
    filter: progid:DXImageTransform.Microsoft.gradient(startColorstr='#333333', endColorstr='#222222', GradientType=0);
}

.brand:hover {
    text-decoration: none;
}

.brand img {
    height: 20px;
    margin-top: -4px;
    margin-right: 4px;
    overflow: hidden;
}

.activity_image {
    height: 140px;
    overflow: hidden;

    -webkit-box-shadow: rgba(0, 0, 0, 0.0742188) 0px 1px 1px 0px;
    background-color: transparent;
    border-bottom-color: #DDD;
    border-bottom-left-radius: 4px;
    border-bottom-right-radius: 4px;
    border-bottom-style: solid;
    border-bottom-width: 1px;
    border-left-color: #DDD;
    border-left-style: solid;
    border-left-width: 1px;
    border-right-color: #DDD;
    border-right-style: solid;
    border-right-width: 1px;
    border-top-color: #DDD;
    border-top-left-radius: 4px;
    border-top-right-radius: 4px;
    border-top-style: solid;
    border-top-width: 1px;
    box-shadow: rgba(0, 0, 0, 0.0742188) 0px 1px 1px 0px;
    color: #0069D6;
    padding: 4px;
}

.favico {
    width: 28px;
    height: 28px;
    position: fixed;
    top: 6px;
    left: 6px;
}

.container-fluid {
    min-width: 0px;
}

